--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote,
 a, abbr, acronym, address, big, cite, code,
@@ -90,4 +85,9 @@ editor-teset
 
 .el-message.small-message {
     min-width: 100px !important;
+}
+
+.blog-detail .box-card .ql-snow .ql-editor pre.ql-syntax {
+    overflow-x: scroll;
+    white-space: pre;
 }
